scrollbar fix

--- a/assets/sass/pages/_edge.scss
+++ b/assets/sass/pages/_edge.scss
@@ -563,6 +563,9 @@ header.edge-header {
 .edge {
     font-family: Poppins;
     color: #707070;
+    .main {
+        overflow: hidden;
+    }
     .hero-type1 .texts-container .texts-wrap .title-label {
         font-weight: bold;
         font-size: 64px;
